hphp/test/zend/bad/ext/spl/tests/spl_pq_top_error_empty.php
<?php

$priorityQueue = new SplPriorityQueue();

try {
    $priorityQueue->top();
} catch (RuntimeException $e) {
    echo "Exception: ".$e->getMessage().PHP_EOL;
}

?>